jumping of results fixed

--- a/style/app.less
+++ b/style/app.less
@@ -42,6 +42,10 @@ body {
 }
 
 
+input{
+  margin-bottom: 1.5em;
+}
+
 .has-error {
     label{
 
